convert index placeholder to basic html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<HTML>
+<HEAD>
+
+</HEAD>
+<BODY>
 Hello World!
+
+<h3>Projects</h3>
+<ul>
+<li>Microsoft Tiles is a homegrown implementation of the Microsoft Metro UI for the web using javascript and jQuery</li>
+<li></li>
+</ul>
+
+</BODY>
+</HTML>
+
