--- a/ms_tiles/index.html
+++ b/ms_tiles/index.html
@@ -1,1 +1,93 @@
-This page is a placeholder for mimicking windows tiles UI
+<!DOCTYPE html>
+<head>
+	<title></title>
+<link href="https://fonts.googleapis.com/css?family=Metrophobic" rel="stylesheet">
+
+
+	<script type="text/javascript">
+	
+	</script>
+	<style type="text/css">
+	body {margin:5px;font-family: 'Metrophobic', sans-serif;color:#eff4ff;}
+	.metroPurpleLight {background-color:#9f00a7 !important;}
+	.metroPurple {background-color:#7e3878 !important;}
+	.metroPurpleDark {background-color:#603cba !important;}
+	
+	.metroRed {background-color:#ee1111 !important;}
+	.metroTeal {background-color:#00aba9 !important;}
+	.metroMagenta {background-color:#ff0097 !important;}
+	.metroGreen {background-color:#00a300 !important;}
+	.metroMagenta {background-color:#ff0097 !important;}
+		
+	.tileColumn {margin:20px;margin-left:40px;width:250px;display:inline-block;}
+	.tile {	padding: 5px;
+			background-color:#2d89ef;
+			margin-top:5px;
+			margin-left:5px;
+			margin-bottom:5px;
+			display:inline-block;
+			position: relative;
+	}
+	.tile1x1 {width:100px;height:100px;}
+	.tile1x2 {width:220px;height:100px;}
+	.tile2x1 {width:100px;height:220px;}
+	.tile2x2 {width:220px;height:220px;}
+	
+	.tileContent {
+		display:inline-block;
+		width:100%; height:100%;
+		}
+	</style>
+	
+</head>
+<body style="">
+	
+	<div class="tileColumn">
+		
+		<div class="tile tile1x1">
+			<div class="tileContent">TEST</div>
+		</div>
+		<div class="tile tile1x1 metroPurple">
+			<div class="tileContent">TEST</div>
+		</div>
+		
+		<div class="tile tile1x2 metroTeal">
+			<div class="tileContent">TEST</div>
+		</div>
+		
+		<div class="tile tile2x2 metroPurpleDark">
+			<div class="tileContent">TEST</div>
+		</div>
+	</div>
+		
+	<div class="tileColumn">
+		
+		<div class="tile tile1x2">
+			<div class="tileContent">TEST</div>
+		</div>
+		
+		<div class="tile tile1x1 metroRed">
+			<div class="tileContent">TEST</div>
+		</div>
+		
+		<div class="tile tile2x2">
+			<div class="tileContent">TEST</div>
+		</div>
+	</div>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script>
+	$("body").css("background-color","#2b5797");
+	
+	$(document).ready(function() {
+		$(".tile").each(function() {
+			loadTile(this);
+		});
+	});
+	function loadTile(tile) {
+		$(tile).find(".tileContent").text("Loading...");
+	}
+	</script>
+
+</body>
+</html>
