--- a/ms_tiles/index.html
+++ b/ms_tiles/index.html
@@ -8,7 +8,15 @@
 	
 	</script>
 	<style type="text/css">
-	body {margin:5px;font-family: 'Metrophobic', sans-serif;color:#eff4ff;}
+html, 
+body {
+    height: 100%;
+}
+	body {	margin:5px;
+		font-family: 'Metrophobic', sans-serif;color:#eff4ff;
+		box-shadow: inset 0 0 10px #222222;
+		margin:0px !important;
+	}
 	.metroPurpleLight {background-color:#9f00a7 !important;}
 	.metroPurple {background-color:#7e3878 !important;}
 	.metroPurpleDark {background-color:#603cba !important;}
@@ -19,14 +27,20 @@
 	.metroGreen {background-color:#00a300 !important;}
 	.metroMagenta {background-color:#ff0097 !important;}
 		
-	.tileColumn {margin:20px;margin-left:40px;width:250px;display:inline-block;}
+	.tileColumn {
+		margin:20px;
+		margin-left:40px;
+		width:250px;
+		display:inline-block;
+	}
 	.tile {	padding: 5px;
-			background-color:#2d89ef;
-			margin-top:5px;
-			margin-left:5px;
-			margin-bottom:5px;
-			display:inline-block;
-			position: relative;
+		background-color:#2d89ef;
+		margin-top:5px;
+		margin-left:5px;
+		margin-bottom:5px;
+		display:inline-block;
+		position: relative;
+		box-shadow: 5px 5px 1em #123456;
 	}
 	.tile1x1 {width:100px;height:100px;}
 	.tile1x2 {width:220px;height:100px;}
