--- a/elf-face/index.html
+++ b/elf-face/index.html
@@ -5,12 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>JavaScript Face Tracking Demo</title>
+    <title>Elf Tracker</title>
 
     <meta name="Description" content="Face tracking demo in JavaScript"/>
-    <meta property="og:image" content="http://kdzwinel.github.io/JS-face-tracking-demo/img/step1.png"/>
-    <link rel="image_src" href="http://kdzwinel.github.io/JS-face-tracking-demo/img/step1.png"/>
-
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -83,7 +80,7 @@
             <li class="disabled"><a href="#" data-step="2">#2 <i class="glyphicon glyphicon-cog"></i></a></li>
             <li class="disabled"><a href="#" data-step="3">#3 <i class="glyphicon glyphicon-send"></i></a></li>
         </ul>
-        <h3 class="text-muted">JavaScript Face Tracking Demo</h3>
+        <h3 class="text-muted">Elf-izer</h3>
     </div>
 
    
