--- a/elf-face/index.html
+++ b/elf-face/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Elf Tracker</title>
+    <title>Elf-erizer</title>
 
     <meta name="Description" content="Face tracking demo in JavaScript"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
@@ -80,7 +80,7 @@
             <li class="disabled"><a href="#" data-step="2">#2 <i class="glyphicon glyphicon-cog"></i></a></li>
             <li class="disabled"><a href="#" data-step="3">#3 <i class="glyphicon glyphicon-send"></i></a></li>
         </ul>
-        <h3 class="text-muted">Elf-izer</h3>
+        <h3 class="text-muted">Elf-erizer</h3>
     </div>
 
    
