--- a/elf-erizer/index.html
+++ b/elf-erizer/index.html
@@ -27,9 +27,9 @@
             </p>
 
             <figure class="not-ready">
-                <video  width="240" autoplay></video>
-                <canvas width="240" class="visible"></canvas>
-                <canvas width="240" class="hidden"></canvas>
+                <video  width="480" autoplay></video>
+                <canvas width="480" class="visible"></canvas>
+                <canvas width="480" class="hidden"></canvas>
             </figure>
 
             <button class="btn btn-lg btn-success" id="record" disabled>Record</button>
@@ -75,11 +75,12 @@
     </div>
 
     <div class="header">
-        <ul class="nav nav-pills pull-right">
+<!--<ul class="nav nav-pills pull-right">
             <li class="active"><a href="#" data-step="1">#1 <i class="glyphicon glyphicon-facetime-video"></i></a></li>
             <li class="disabled"><a href="#" data-step="2">#2 <i class="glyphicon glyphicon-cog"></i></a></li>
             <li class="disabled"><a href="#" data-step="3">#3 <i class="glyphicon glyphicon-send"></i></a></li>
         </ul>
+-->
         <h3 class="text-muted">Elf-erizer</h3>
     </div>
 
