--- a/elf-erizer/p5test.html
+++ b/elf-erizer/p5test.html
@@ -8,8 +8,10 @@
 
     <title>Elf-erizer</title>
 
-    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
+    
     <script src="https://unpkg.com/ml5@0.1.1/dist/ml5.min.js"></script>
     <script src="js/sketch.js"></script>
 
