--- a/elf-erizer/p5test.html
+++ b/elf-erizer/p5test.html
@@ -14,7 +14,11 @@
     
     <script src="https://unpkg.com/ml5@0.1.1/dist/ml5.min.js"></script>
     <script src="js/sketch.js"></script>
-
+    <style>
+        body {
+            background:rgb(250,250,250); 
+        }
+    </style>
 </head>
 <body>
 
