--- a/elf-erizer/p5test.html
+++ b/elf-erizer/p5test.html
@@ -15,8 +15,20 @@
     <script src="https://unpkg.com/ml5@0.1.1/dist/ml5.min.js"></script>
     <script src="js/sketch.js"></script>
     <style>
+        html, body {
+          height: 100%;
+        }
+
         body {
-            background:rgb(250,250,250); 
+          background:rgb(250,250,250); 
+          margin: 0;
+          display: flex;
+
+          /* This centers our sketch horizontally. */
+          justify-content: center;
+
+          /* This centers our sketch vertically. */
+          align-items: center;
         }
     </style>
 </head>
